--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-index.html
+<head>
+<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="css/style.css">
+
+</head> 
+<body>
+<header>
+<nav class="top-navigation">
+<div class="content">
+	<ul class="links">
+		<li>Log In</li>
+		<li>Help</li>
+		<li>Blog</li>
+		<li>Store</li>
+		<li>How It Works</li>
+		<li class="active">Meet Karma</li>
+	</ul>
+	<img class="logo" src="img/karma-log.svg" alt="Logo Image" width="26px">
+</div>
+</nav>
+</header>
+</body>
