--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 
 </head> 
 <body>
