Adding the coffee shop pic

--- a/index.html
+++ b/index.html
@@ -1,22 +1,32 @@
 <head>
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="style.css">
-
 </head> 
+
 <body>
 <header>
+
+<!--Navigation Bar -->
 <nav class="top-navigation">
 <div class="content">
 	<ul class="links">
-		<li>Log In</li>
-		<li>Help</li>
-		<li>Blog</li>
-		<li>Store</li>
-		<li>How It Works</li>
 		<li class="active">Meet Karma</li>
+		<li>How It Works</li>
+		<li>Store</li>
+		<li>Blog</li>
+		<li>Help</li>
+		<li>Log In</li>
 	</ul>
-	<img class="logo" src="img/karma-log.svg" alt="Logo Image" width="26px">
+	<img class="logo" src="img/karma-log.png" alt="Logo Image" width="70px">
 </div>
 </nav>
+
+<!-- Introduction Section -->
+<div class="introduction"> 
+<div class="intro-content">
+<h1 class="introducing-karma"> Introducing Karma </h1>
+<p class="bring-wifi">Bring WiFi with you, everywhere you go. </p>
+</div>
+</div>
 </header>
 </body>
