--- a/index.html
+++ b/index.html
@@ -20,13 +20,19 @@
 	<img class="logo" src="img/karma-log.png" alt="Logo Image" width="70px">
 </div>
 </nav>
-
-<!-- Introduction Section -->
-<div class="introduction"> 
-<div class="intro-content">
-<h1 class="introducing-karma"> Introducing Karma </h1>
-<p class="bring-wifi">Bring WiFi with you, everywhere you go. </p>
-</div>
-</div>
 </header>
+<!-- Introduction Section -->
+<section class="introduction"> 
+	<div class="intro-content">
+		<h1 class="introducing-karma"> Introducing Karma </h1>
+		<p class="bring-wifi">Bring WiFi with you, everywhere you go. </p>
+	<div>
+		</div>
+			<h3 class="learn-more">Learn More</h3>
+		</div>
+		<div>
+			
+		</div>
+	</div>	
+</section>
 </body>
