--- a/index.html
+++ b/index.html
@@ -24,15 +24,10 @@
 <!-- Introduction Section -->
 <section class="introduction"> 
 	<div class="intro-content">
-		<h1 class="introducing-karma"> Introducing Karma </h1>
-		<p class="bring-wifi">Bring WiFi with you, everywhere you go. </p>
-	<div>
-		</div>
-			<h3 class="learn-more">Learn More</h3>
-		</div>
-		<div>
-			
-		</div>
+			<h1 class="introducing-karma"> Introducing Karma </h1>
+			<p class="bring-wifi">Bring WiFi with you, everywhere you go. </p>	
+			<button>Learn More</button>
+		
 	</div>	
 </section>
 </body>
