--- a/index.html
+++ b/index.html
@@ -26,8 +26,15 @@
 	<div class="intro-content">
 			<h1 class="introducing-karma"> Introducing Karma </h1>
 			<p class="bring-wifi">Bring WiFi with you, everywhere you go. </p>	
-			<button>Learn More</button>
-		
+	</div>
+	<div class="learn-more">
+		<button class="big-button">Learn More</button>
 	</div>	
+</section>
+<section class="cases">
+	<h2>Everyone Needs A Little Karma.</h2>
+	<div class="devices"></div>
+	<div class="devices"></div>
+	<div class="devices"></div>
 </section>
 </body>
