--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 </section>
 <section class="cases">
 	<h2>Everyone Needs A Little Karma.</h2>
-	<div class="devices"></div>
+	<div class="devices">
+		<img class="devices" src="img/devices.tiff" alt="electronic-devices" width="50px">
+	</div>
 	<div class="devices"></div>
 	<div class="devices"></div>
 </section>
