commit with images

--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
 <section class="cases">
 	<h2>Everyone Needs A Little Karma.</h2>
 	<div class="devices">
-		<img class="devices" src="img/devices.tiff" alt="electronic-devices" width="50px">
+		<img class="devices" src="img/devices.jpg" alt="electronic-devices" width="150px">
 	</div>
-	<div class="devices"></div>
+	<div class="devices">
+		<img class="coffee" src="img/coffee.jpg" alt="coffee-mug" width="150px">
+	</div>
 	<div class="devices"></div>
 </section>
 </body>
