commit with three icons

--- a/index.html
+++ b/index.html
@@ -32,13 +32,21 @@
 	</div>	
 </section>
 <section class="cases">
-	<h2>Everyone Needs A Little Karma.</h2>
+	<h2 class="everyone-karma">Everyone Needs A Little Karma.</h2>
 	<div class="devices">
 		<img class="devices" src="img/devices.jpg" alt="electronic-devices" width="150px">
+		<h2 class="devices-internet">Internet For All Devices</h2>
+		<p class="devices-internet">Connect all your favorite devices to Karma.</p>
 	</div>
 	<div class="devices">
 		<img class="coffee" src="img/coffee.jpg" alt="coffee-mug" width="150px">
+		<h2 class="devices-coffee">Boost Your Productivity</h2>
+		<p class="devices-coffee">Freedom of the Internet, Wherever You Are.</p>
 	</div>
-	<div class="devices"></div>
+	<div class="devices">
+		<img class="refill" src="img/refill.jpg" alt="refill-gas" width="150px">
+		<h2 class="devices-refill">Pay As You Go</h2>
+		<p class="devices-refill">Take full control of your spend. Pay for what you need.</p>
+	</div>
 </section>
 </body>
