facebook icon add

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 	<div class="learn-more">
 		<button class="big-button">Learn More</button>
 	</div>	
+<!-- Karma Three Images -->	
 </section>
 <section class="cases">
 	<h2 class="everyone-karma">Everyone Needs A Little Karma.</h2>
@@ -49,4 +50,28 @@
 		<p class="devices-refill">Take full control of your spend. Pay for what you need.</p>
 	</div>
 </section>
+
+<footer>
+	<ul class="footer-company">
+		<li class="list-head">Company</li>
+		<li>About Us</li>
+		<li>Jobs</li>
+		<li>Blog</li>
+		<li>Privacy</li>
+		<li>Terms</li>
+	</ul>
+	<ul class="footer-shop">
+		<li class="list-head">Shop</li>
+		<li>Store</li>
+		<li>Returns</li>
+	</ul>
+	<ul class="footer-support">
+		<li class="list-head">Support</li>
+		<li>Help</li>
+		<li>Contact Us</li>
+		<li>Get Started</li>
+	</ul>
+	<h2>Join us on</h2>
+	<p class="karma-notes">© Karma Mobility, Inc.</p>
+</footer>
 </body>
