--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
 		<li>Get Started</li>
 	</ul>
 	<h2>Join us on</h2>
-	<p class="karma-notes">© Karma Mobility, Inc.</p>
+	<div class="footer-social">
+		<img src="img/facebook-icon.png" alt="facebook" width="30">
+		<img src="img/twitter-icon.png" alt="twitter" width="30">
+		<img src="img/instagram-icon.png" alt="instagram" width="30">
+	</div>	
+	<p class="karma-notes"> Karma Mobility, Inc.</p>
 </footer>
 </body>
