adding the font icons

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+<!--link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" -->
+<link href="startup-landing-page-clone/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="style.css">
 </head> 
 
@@ -78,6 +79,15 @@
 		<img src="img/twitter-icon.png" alt="twitter" width="30">
 		<img src="img/instagram-icon.png" alt="instagram" width="30">
 	</div>	
+	<div class="social-icons">
+		<li>
+			<i class="fa fa-twitter">Twitter</i>
+		</li>
+		<li>
+			<i class="fa fa-facebook">Facebook</i>
+		</li>
+
+	</div>
 	<p class="karma-notes"> Karma Mobility, Inc.</p>
 </footer>
 </body>
