adding picture for buy it now section

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 <!--link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" -->
-<link href="startup-landing-page-clone/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="style.css">
 </head> 
 
@@ -81,10 +81,13 @@
 	</div>	
 	<div class="social-icons">
 		<li>
-			<i class="fa fa-twitter">Twitter</i>
+			<i class="fa fa-twitter fa-4x"></i>
 		</li>
 		<li>
-			<i class="fa fa-facebook">Facebook</i>
+			<i class="fa fa-facebook fa-4x"></i> 
+		</li>
+		<li>
+			<i class="fa fa-instagram fa-4x"></i>
 		</li>
 
 	</div>
