--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!--link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" -->
 <link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="icon" type="image/png" href="img/favicon-karma.ico" />
 </head> 
 
 <body>
@@ -32,6 +33,7 @@
 	<div class="learn-more">
 		<button class="big-button">Learn More</button>
 	</div>	
+
 <!-- Karma Three Images -->	
 </section>
 <section class="cases">
@@ -53,6 +55,24 @@
 	</div>
 </section>
 
+<!-- Buy it now section -->	
+
+<section class="buy-it-now">
+	<div class="buy-karma">
+		<div class="buy-it-now-explain">
+			<h1>What is Karma </h1>	
+			<aside>The search for reliable WiFi can be frustrating. During your commute, at your local coffee shop, at the airport or hotel.
+			</aside>
+			<aside> Meet Karma: your pocket's new pal. Karma will keep your devices online, everywhere you go.  
+			</aside>
+			<aside>Karma grabs a 4G signal and creates your own personal WiFi network. Give it a home in your bag and stay connected for good.
+			</aside>
+		</div>
+		<div class="buy-now-button">
+			<button class="buy-now-button">Buy It Now</button>
+		</div>	
+	</div>
+</section>
 <footer>
 	<ul class="footer-company">
 		<li class="list-head">Company</li>
