--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" -->
 <link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="style.css">
-<link rel="icon" type="image/png" href="img/favicon-karma.ico" />
+<link rel="icon" type="image/ico" href="img/favicon-karma.ico" />
 </head> 
 
 <body>
